--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
     <!-- companies section -->
 
-    <section class="companies-section">
+    <section class="companies-section py-12">
         <div class="container">
             <div class="small-bold-text companies-header">The world’s best companies rely on UsabilityHub to make
                 better design decisions.</div>
